force-app/main/default/objects/Project__c/fields/GST_Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage_Discount__c</fullName>
    <label>GST Percentage Discount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>