force-app/main/default/objects/Project__c/fields/Haptik_Bot_Active__c.field-meta.xml
<CustomField>
    <fullName>Haptik_Bot_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Haptik Bot Active</label>
    <type>Checkbox</type>
</CustomField>