force-app/main/default/objects/Project__c/fields/Home_Loan_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Contact_1__c</fullName>
    <label>Home Loan Contact 1</label>
    <type>Phone</type>
</CustomField>