force-app/main/default/objects/Project__c/fields/Home_Loan_Email__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Email__c</fullName>
    <label>Home Loan Email</label>
    <type>Email</type>
</CustomField>