force-app/main/default/objects/Project__c/fields/In_Advance_Registration__c.field-meta.xml
<CustomField>
    <fullName>In_Advance_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Advance Registration</label>
    <type>Checkbox</type>
</CustomField>