force-app/main/default/objects/Project__c/fields/Include_in_Online_Projects_Data_Export__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Online_Projects_Data_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Online Projects Data Export</label>
    <type>Checkbox</type>
</CustomField>