force-app/main/default/objects/Project__c/fields/Int_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Int_Grace_Period__c</fullName>
    <label>Int. Grace Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>