force-app/main/default/objects/Project__c/fields/Integrate_with_FA__c.field-meta.xml
<CustomField>
    <fullName>Integrate_with_FA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Integrate with FA</label>
    <type>Checkbox</type>
</CustomField>