force-app/main/default/objects/Project__c/fields/Interest_Application_as__c.field-meta.xml
<CustomField>
    <fullName>Interest_Application_as__c</fullName>
    <label>Interest Application as</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>