force-app/main/default/objects/Project__c/fields/Interest_Applies_Over_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Applies_Over_Grace_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Applies Over Grace Period</label>
    <type>Checkbox</type>
</CustomField>