force-app/main/default/objects/Project__c/fields/Is_Broker_Change_Allowed_on_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Broker_Change_Allowed_on_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Broker Change Allowed on Booking</label>
    <type>Checkbox</type>
</CustomField>