force-app/main/default/objects/Project__c/fields/Is_Car_Parking_Applicable_for_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Is_Car_Parking_Applicable_for_Brokerage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Car Parking Applicable for Brokerage?</label>
    <type>Checkbox</type>
</CustomField>