force-app/main/default/objects/Project__c/fields/Is_PDC_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_PDC_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PDC Allowed</label>
    <type>Checkbox</type>
</CustomField>