force-app/main/default/objects/Project__c/fields/Is_Service_Tax_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Tax_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Service Tax Applicable</label>
    <type>Checkbox</type>
</CustomField>