force-app/main/default/objects/Project__c/fields/IW_CEO__c.field-meta.xml
<CustomField>
    <fullName>IW_CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IW- CEO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsMMsr</relationshipName>
    <type>Lookup</type>
</CustomField>