force-app/main/default/objects/Project__c/fields/IW_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>IW_CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IW-CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsMMpd</relationshipName>
    <type>Lookup</type>
</CustomField>