force-app/main/default/objects/Project__c/fields/IW_Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>IW_Project_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IW- Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsMMmP</relationshipName>
    <type>Lookup</type>
</CustomField>