force-app/main/default/objects/Project__c/fields/JV__c.field-meta.xml
<CustomField>
    <fullName>JV__c</fullName>
    <label>JV</label>
    <length>5</length>
    <type>Text</type>
</CustomField>