force-app/main/default/objects/Project__c/fields/Key_Features_Amenities_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Key_Features_Amenities_Video_Link__c</fullName>
    <label>Key Features &amp; Amenities Video Link</label>
    <type>Url</type>
</CustomField>