force-app/main/default/objects/Project__c/fields/Kserve_Integration__c.field-meta.xml
<CustomField>
    <fullName>Kserve_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kserve Integration</label>
    <type>Checkbox</type>
</CustomField>