force-app/main/default/objects/Project__c/fields/Ledger_Narration__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Narration__c</fullName>
    <label>Ledger Narration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>