force-app/main/default/objects/Project__c/fields/Location_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Location_Map_URL__c</fullName>
    <label>Location Map URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>