force-app/main/default/objects/Project__c/fields/Loyalty_Head__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsKte9</relationshipName>
    <type>Lookup</type>
</CustomField>