force-app/main/default/objects/Project__c/fields/Loyalty_Users__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Users__c</fullName>
    <inlineHelpText>Avoid space after comma</inlineHelpText>
    <label>Loyalty Lead Assign Users(Avoid &apos;, &apos; )</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>