force-app/main/default/objects/Project__c/fields/Main_Picture__c.field-meta.xml
<CustomField>
    <fullName>Main_Picture__c</fullName>
    <description>Add main image and text for the project</description>
    <label>Main Picture</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>