force-app/main/default/objects/Project__c/fields/Marketing_Executive__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Executive (Campaign)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsGpwN</relationshipName>
    <type>Lookup</type>
</CustomField>