force-app/main/default/objects/Project__c/fields/MIS_User__c.field-meta.xml
<CustomField>
    <fullName>MIS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MIS User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectshTMP</relationshipName>
    <type>Lookup</type>
</CustomField>