force-app/main/default/objects/Project__c/fields/Narration__c.field-meta.xml
<CustomField>
    <fullName>Narration__c</fullName>
    <label>Narration(To be Printed On Receipt)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>