force-app/main/default/objects/Project__c/fields/New_Rate_Increased_Area__c.field-meta.xml
<CustomField>
    <fullName>New_Rate_Increased_Area__c</fullName>
    <label>New Rate(Increased Area)</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>