force-app/main/default/objects/Project__c/fields/Non_Contactable_Text__c.field-meta.xml
<CustomField>
    <fullName>Non_Contactable_Text__c</fullName>
    <label>Non Contactable Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>