force-app/main/default/objects/Project__c/fields/Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Notes_New__c</fullName>
    <label>Notes New</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>