force-app/main/default/objects/Project__c/fields/Opportunity_cooling_period_on_assignment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_cooling_period_on_assignment__c</fullName>
    <label>Opportunity cooling period on assignment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>