force-app/main/default/objects/Project__c/fields/OpportunityExpires_After_Days__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExpires_After_Days__c</fullName>
    <label>OpportunityExpires After Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>