force-app/main/default/objects/Project__c/fields/OTP_for_Direct_Lead__c.field-meta.xml
<CustomField>
    <fullName>OTP_for_Direct_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OTP for Direct Lead</label>
    <type>Checkbox</type>
</CustomField>