force-app/main/default/objects/Project__c/fields/Outstanding_Amount_Limit__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Amount_Limit__c</fullName>
    <label>Outstanding Amount Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>