force-app/main/default/objects/Project__c/fields/Overall_CRM_Head__c.field-meta.xml
<CustomField>
    <fullName>Overall_CRM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overall CRM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectOverAllCRMHead</relationshipName>
    <type>Lookup</type>
</CustomField>