force-app/main/default/objects/Project__c/fields/Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>Per_Annum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Annum</label>
    <type>Checkbox</type>
</CustomField>