force-app/main/default/objects/Project__c/fields/Photo_Album__c.field-meta.xml
<CustomField>
    <fullName>Photo_Album__c</fullName>
    <label>Photo Album</label>
    <type>Url</type>
</CustomField>