force-app/main/default/objects/Project__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <label>Place of Supply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>