force-app/main/default/objects/Project__c/fields/Possession_Template__c.field-meta.xml
<CustomField>
    <fullName>Possession_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possession Template</label>
    <referenceTo>Survey_Template__c</referenceTo>
    <relationshipLabel>Projects (Possession Template)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>