force-app/main/default/objects/Project__c/fields/Presales_TL__c.field-meta.xml
<CustomField>
    <fullName>Presales_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presales TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectPresalesTL</relationshipName>
    <type>Lookup</type>
</CustomField>