force-app/main/default/objects/Project__c/fields/Print_Default_Receipt_Remark__c.field-meta.xml
<CustomField>
    <fullName>Print_Default_Receipt_Remark__c</fullName>
    <label>Print Default Receipt Remark</label>
    <type>TextArea</type>
</CustomField>