force-app/main/default/objects/Project__c/fields/Print_Installment_Description_On_Ledg__c.field-meta.xml
<CustomField>
    <fullName>Print_Installment_Description_On_Ledg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Installment Description On Ledg</label>
    <type>Checkbox</type>
</CustomField>