force-app/main/default/objects/Project__c/fields/Project_Description_Site__c.field-meta.xml
<CustomField>
    <fullName>Project_Description_Site__c</fullName>
    <label>Project Description Site</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>