force-app/main/default/objects/Project__c/fields/Project_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Details__c</fullName>
    <label>Project Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>