force-app/main/default/objects/Project__c/fields/Project_Last_page__c.field-meta.xml
<CustomField>
    <fullName>Project_Last_page__c</fullName>
    <formula>IMAGE( Project_Last_Page_URL__c , &quot;&quot;,85.97, 90.70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Last page</label>
    <type>Text</type>
</CustomField>