force-app/main/default/objects/Project__c/fields/Project_Last_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Last_Page_URL__c</fullName>
    <label>Project Last Page URL</label>
    <type>Url</type>
</CustomField>