force-app/main/default/objects/Project__c/fields/Project_Receipt_Header__c.field-meta.xml
<CustomField>
    <fullName>Project_Receipt_Header__c</fullName>
    <label>Project Receipt Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>