force-app/main/default/objects/Project__c/fields/Project_site_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_site_URL__c</fullName>
    <label>Project Front Page URL</label>
    <type>Url</type>
</CustomField>