force-app/main/default/objects/Project__c/fields/Project_type__c.field-meta.xml
<CustomField>
    <fullName>Project_type__c</fullName>
    <label>Project type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>