force-app/main/default/objects/Project__c/fields/Project_Waived_Limit_In_Cr__c.field-meta.xml
<CustomField>
    <fullName>Project_Waived_Limit_In_Cr__c</fullName>
    <formula>Project_Location__r.Project_Waived_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Waived Limit (In Cr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>