force-app/main/default/objects/Project__c/fields/Prospect_Engagement_Team__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Engagement_Team__c</fullName>
    <label>Prospect Engagement Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>