force-app/main/default/objects/Project__c/fields/Puzzle_Car_Park_Available__c.field-meta.xml
<CustomField>
    <fullName>Puzzle_Car_Park_Available__c</fullName>
    <formula>Puzzle_Car_Park_Total__c - ( Puzzle_Car_Park_Booked__c + Puzzle_Car_Park_Sold__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Puzzle Car Park (Available)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>