force-app/main/default/objects/Project__c/fields/Quotation_Approver__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Approver__c</fullName>
    <label>Quotation Approver</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunal</fullName>
            </value>
            <value>
                <fullName>Munal</fullName>
            </value>
            <value>
                <fullName>Tunal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>