force-app/main/default/objects/Project__c/fields/Quotation_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Terms_Conditions__c</fullName>
    <inlineHelpText>Terms and conditions for view quotation pdf.</inlineHelpText>
    <label>Quotation Terms&amp;Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>