force-app/main/default/objects/Project__c/fields/Quotation_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Validity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number days a quote is valid</description>
    <label>Quotation Validity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>