force-app/main/default/objects/Project__c/fields/Radius_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Radius_Project_Type__c</fullName>
    <label>Radius Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Going</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>UpComing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>