force-app/main/default/objects/Project__c/fields/RDS_City__c.field-meta.xml
<CustomField>
    <fullName>RDS_City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bahadurgarh</fullName>
            </value>
            <value>
                <fullName>Bengalaruru</fullName>
            </value>
            <value>
                <fullName>Faridabad</fullName>
            </value>
            <value>
                <fullName>Greater Noida</fullName>
            </value>
            <value>
                <fullName>Gurgaon</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Meerut</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Palwal</fullName>
            </value>
            <value>
                <fullName>Sirsa</fullName>
            </value>
            <value>
                <fullName>Thane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>