force-app/main/default/objects/Project__c/fields/RDS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Code</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>