force-app/main/default/objects/Project__c/fields/RDS_Contact_Person1__c.field-meta.xml
<CustomField>
    <fullName>RDS_Contact_Person1__c</fullName>
    <label>Contact Person1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>