force-app/main/default/objects/Project__c/fields/RDS_Project_Description__c.field-meta.xml
<CustomField>
    <fullName>RDS_Project_Description__c</fullName>
    <label>Project Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>