force-app/main/default/objects/Project__c/fields/RDS_State__c.field-meta.xml
<CustomField>
    <fullName>RDS_State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>