force-app/main/default/objects/Project__c/fields/Referral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Referral_Percentage__c</fullName>
    <label>Referral Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>