force-app/main/default/objects/Project__c/fields/Registration_Charge__c.field-meta.xml
<CustomField>
    <fullName>Registration_Charge__c</fullName>
    <description>Registration % based on the agreement value</description>
    <label>Registration Charge %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>