force-app/main/default/objects/Project__c/fields/Registration_Consultation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Registration_Consultation_Fee__c</fullName>
    <label>Registration Consultation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>