force-app/main/default/objects/Project__c/fields/Registration_Fee_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_Inclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Fee Inclusive?</label>
    <type>Checkbox</type>
</CustomField>