force-app/main/default/objects/Project__c/fields/RM__c.field-meta.xml
<CustomField>
    <fullName>RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>