force-app/main/default/objects/Project__c/fields/RW_Address__c.field-meta.xml
<CustomField>
    <fullName>RW_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>