force-app/main/default/objects/Project__c/fields/RW_Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>RW_Corporate_Email__c</fullName>
    <label>Corporate Email</label>
    <type>Email</type>
</CustomField>