force-app/main/default/objects/Project__c/fields/RW_Floor_Plans__c.field-meta.xml
<CustomField>
    <fullName>RW_Floor_Plans__c</fullName>
    <label>WhatsApp Bot Floor Plans</label>
    <type>Url</type>
</CustomField>