force-app/main/default/objects/Project__c/fields/RW_LocalityName__c.field-meta.xml
<CustomField>
    <fullName>RW_LocalityName__c</fullName>
    <label>LocalityName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>