force-app/main/default/objects/Project__c/fields/RW_Project_Brochure_ID__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Brochure_ID__c</fullName>
    <label>Project Brochure ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>