force-app/main/default/objects/Project__c/fields/RW_Project_Brochure_PublicUrl__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Brochure_PublicUrl__c</fullName>
    <label>Project Brochure PublicUrl</label>
    <type>Url</type>
</CustomField>