force-app/main/default/objects/Project__c/fields/RW_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Code__c</fullName>
    <label>Project Code</label>
    <length>3</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>