force-app/main/default/objects/Project__c/fields/RW_Project_Image__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Image__c</fullName>
    <label>Project Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>