force-app/main/default/objects/Project__c/fields/RW_Project_Location_Videos_Link__c.field-meta.xml
<CustomField>
    <fullName>RW_Project_Location_Videos_Link__c</fullName>
    <label>Project Location Videos Link</label>
    <type>Url</type>
</CustomField>