force-app/main/default/objects/Project__c/fields/RW_SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_SAP_Company_Code__c</fullName>
    <label>SAP Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>