force-app/main/default/objects/Project__c/fields/S_Applicable_From_Floor__c.field-meta.xml
<CustomField>
    <fullName>S_Applicable_From_Floor__c</fullName>
    <label>Applicable From Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>